--- a/front/index.html
+++ b/front/index.html
@@ -6,11 +6,11 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <title></title>
+    <title>GEL + FRANCE - Gel Creator</title>
   </head>
   <body>
   <nav class="sidenav">
-    <form class="needs-validation" novalidate="">
+    <form class="needs-validation" method="post" enctype="multipart/form-data">
 
       <div class="text-center">
         <h1>GEL + FRANCE</h1>
@@ -21,7 +21,7 @@
         <label for="logo-file" class="lead">Image Logo</label>
         <div class="input-group">
           <div class="custom-file">
-            <input type="file" class="custom-file-input" id="logo-file" name="logo-file" aria-describedby="logo-file" accept="image/x-png,image/gif,image/jpeg">
+            <input type="file" class="custom-file-input" id="logo-file" name="logo-file" aria-describedby="logo-file" accept="image/x-png,image/gif,image/jpeg" required="required">
             <label class="custom-file-label" for="logo-file"></label>
           </div>
         </div>
@@ -37,20 +37,10 @@
       <label class="lead">Fond Face</label>
 
       <div class="input-group mb-2">
-        <div class="input-group-prepend">
-          <div class="input-group-text">
-            <input type="radio" name="face" value="C" checked>
-          </div>
-        </div>
         <input type="color" class="form-control" id="face-color" value="#ffffff" name="face-color">
       </div>
 
       <div class="input-group mb-3">
-        <div class="input-group-prepend">
-          <div class="input-group-text">
-            <input type="radio" name="face" value="I">
-          </div>
-        </div>
         <div class="custom-file">
           <input type="file" class="custom-file-input" id="face-file" name="face-file" aria-describedby="face-input" accept="image/x-png,image/gif,image/jpeg">
           <label class="custom-file-label" for="face-file"></label>
@@ -61,25 +51,24 @@
         <input type="range" class="form-control-range" id="face-opacity" name="face-opacity" value="100">
       </div>
 
+      <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <div class="input-group-text">
+            <label>Police</label>
+          </div>
+        </div>
+        <input type="color" class="form-control" id="face-font-color" value="#000000" name="face-font-color">
+      </div>
+
       <hr class="mb-2">
 
       <label class="lead">Fond Dos</label>
 
       <div class="input-group mb-2">
-        <div class="input-group-prepend">
-          <div class="input-group-text">
-            <input type="radio" name="back" value="C" checked>
-          </div>
-        </div>
         <input type="color" class="form-control" id="back-color" value="#ffffff" name="back-color">
       </div>
 
       <div class="input-group mb-3">
-        <div class="input-group-prepend">
-          <div class="input-group-text">
-            <input type="radio" name="back" value="I">
-          </div>
-        </div>
         <div class="custom-file">
           <input type="file" class="custom-file-input" id="back-file" name="back-file" aria-describedby="back-file" accept="image/x-png,image/gif,image/jpeg">
           <label class="custom-file-label" for="back-file"></label>
@@ -90,8 +79,23 @@
         <input type="range" class="form-control-range" id="back-opacity" name="back-opacity" value="100">
       </div>
 
+      <div class="input-group mb-2">
+        <div class="input-group-prepend">
+          <div class="input-group-text">
+            <label>Police</label>
+          </div>
+        </div>
+        <input type="color" class="form-control" id="back-font-color" value="#000000" name="back-font-color">
+      </div>
+
       <hr class="mb-4">
-      <button class="btn btn-primary btn-lg btn-block" type="submit" disabled>Commander</button>
+
+
+      <div class="form-group">
+        <input type="email" class="form-control" name="email" placeholder="Email" required>
+      </div>
+
+      <button class="btn btn-primary btn-lg btn-block" type="submit">Commander</button>
     </form>
   </nav>
 
@@ -103,13 +107,10 @@
       <a class="btn btn-primary btn-download" type="submit" id="download-front">Télécharger</a>
     </div>
     <canvas id="canvas-front"></canvas>
-    <div class="btn-container">
-      <a class="btn btn-primary btn-download" type="submit" id="download-back">Télécharger</a>
-    </div>
     <canvas id="canvas"></canvas>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   <script src="public/bundle.js"></script>
