--- a/front/index.html
+++ b/front/index.html
@@ -77,6 +77,9 @@
 
             <div class="input-group mb-2">
                 <input type="color" class="form-control" id="back-color" value="#ffffff" name="back-color">
+                <div class="input-group-append">
+                    <span class="input-group-text">Couleur</span>
+                </div>
             </div>
 
             <div class="input-group mb-1">
