--- a/front/index.html
+++ b/front/index.html
@@ -43,7 +43,7 @@
             <label class="lead">Fond Recto</label>
 
             <div class="input-group mb-2">
-                <input type="color" class="form-control" id="face-color" value="#ffffff" name="face-color">
+                <input type="color" class="form-control" id="face-color" value="#ffffff" data-default-value="#ffffff"  name="face-color">
                 <div class="input-group-append">
                     <span class="input-group-text">Couleur</span>
                 </div>
@@ -63,7 +63,7 @@
             </div>
 
             <div class="input-group mb-2">
-                <input type="color" class="form-control" id="face-font-color" value="#000000" name="face-font-color">
+                <input type="color" class="form-control" id="face-font-color" value="#000000" data-default-value="#000000"  name="face-font-color">
                 <div class="input-group-append">
                     <div class="input-group-text">
                         <label>Couleur du texte</label>
@@ -76,7 +76,7 @@
             <label class="lead">Fond Verso</label>
 
             <div class="input-group mb-2">
-                <input type="color" class="form-control" id="back-color" value="#ffffff" name="back-color">
+                <input type="color" class="form-control" id="back-color" value="#ffffff" data-default-value="#ffffff"  name="back-color">
                 <div class="input-group-append">
                     <span class="input-group-text">Couleur</span>
                 </div>
@@ -96,7 +96,7 @@
             </div>
 
             <div class="input-group mb-2">
-                <input type="color" class="form-control" id="back-font-color" value="#000000" name="back-font-color">
+                <input type="color" class="form-control" id="back-font-color" value="#000000" data-default-value="#000000" name="back-font-color">
                 <div class="input-group-append">
                     <div class="input-group-text">
                         <label>Couleur du texte</label>
@@ -112,6 +112,7 @@
             </div>
 
             <button class="btn btn-primary btn-lg btn-block" type="submit">Envoyer</button>
+            <a href="/" class="btn btn-link btn-lg btn-block btn-new-sachet">Créer un nouveau sachet</a>
         </form>
 
         <div class="py-2 result-container">
