Massive email send

--- a/front/admin.html
+++ b/front/admin.html
@@ -96,10 +96,10 @@
     <h1 class="h3 mb-3 font-weight-normal">GEL + FRANCE</h1>
     <label for="username" class="sr-only">Username</label>
     <input type="text" id="username" class="form-control" placeholder="Username" required="required" autofocus=""
-           minlength="4" value="sachetadmin">
+           minlength="4">
     <label for="password" class="sr-only">Mot de passe</label>
     <input type="password" id="password" class="form-control" placeholder="Mot de passe" required="required"
-           minlength="8" value="MacronMelenchonLePen">
+           minlength="8">
 
     <button class="btn btn-lg btn-primary btn-block" type="submit">Connexion</button>
     <p class="mt-5 mb-3 text-muted">©2020</p>
