--- a/front/admin.html
+++ b/front/admin.html
@@ -155,7 +155,8 @@
                 </div>
             </div>
 
-            <div class="text-left">
+            <div class="text-right">
+                <a class="btn btn-lg btn-secondary" type="button" disabled="disabled" id="download-rows">Télécharger 💾</a>
                 <button class="btn btn-lg btn-primary" type="button" disabled="disabled" id="send-emails">Envoyer 🛫</button>
             </div>
         </div>
