Fixes improvements and new features

--- a/front/admin.html
+++ b/front/admin.html
@@ -134,7 +134,7 @@
             </div>
 
             <div class="form-group">
-                <label class="lead">📷 File content</label>
+                <label class="lead">💿 File content</label>
                 <div class="table-responsive">
                     <table class="table table-bordered">
                         <thead>
@@ -144,11 +144,13 @@
                             <th scope="col">Email</th>
                             <th scope="col">Url</th>
                             <th scope="col">Logo</th>
+                            <th scope="col">Generated ID</th>
+                            <th scope="col">Generated Link</th>
                         </tr>
                         </thead>
                         <tbody class="csv-content">
                         <tr>
-                            <td colspan="5"><p class="text-center">No content loaded yet 😟</p></td>
+                            <td colspan="7"><p class="text-center">No content loaded yet 😟</p></td>
                         </tr>
                         </tbody>
                     </table>
@@ -157,6 +159,7 @@
 
             <div class="text-right">
                 <a class="btn btn-lg btn-secondary" type="button" disabled="disabled" id="download-rows">Télécharger 💾</a>
+                <button class="btn btn-lg btn-warning" type="button" disabled="disabled" id="save-sachets">Sauvegarder Sachet 🏄</button>
                 <button class="btn btn-lg btn-primary" type="button" disabled="disabled" id="send-emails">Envoyer 🛫</button>
             </div>
         </div>
