a lot of changes and optimizations

--- a/front/index.html
+++ b/front/index.html
@@ -11,6 +11,12 @@
 </head>
 <body>
 
+<div class="loader">
+    <div class="spinner-border text-light" role="status">
+        <span class="sr-only">Loading...</span>
+    </div>
+</div>
+
 <nav class="sidenav">
 
     <div class="form-container">
@@ -144,6 +150,22 @@
 <div class="canvas-container collapse" id="the-canvas">
     <canvas id="canvas-front"></canvas>
     <canvas id="canvas"></canvas>
+</div>
+
+<div>
+    <img src="objects/dos/stridePicDos.png" id="stridePicDos" style="display:none;">
+    <img src="objects/dos/DessinDos.png" id="DessinDos" style="display:none;">
+    <img src="objects/dos/DessinDosSachet.png" id="DessinDosSachet" style="display:none;">
+    <img src="objects/dos/TextDos.png" id="TextDos" style="display:none;">
+    <img src="objects/dos/TextDosSachet.png" id="TextDosSachet" style="display:none;">
+
+    <img src="objects/face/stridePicFace.png" id="stridePicFace" style="display:none;">
+    <img src="objects/face/DessinFace.png" id="DessinFace" style="display:none;">
+    <img src="objects/face/DessinFaceSachet.png" id="DessinFaceSachet" style="display:none;">
+    <img src="objects/face/TextFace.png" id="TextFace" style="display:none;">
+    <img src="objects/face/TextFaceSachet.png" id="TextFaceSachet" style="display:none;">
+
+    <img src="objects/logoExample.png" id="logoExample" style="display:none;">
 </div>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
