--- a/front/admin.html
+++ b/front/admin.html
@@ -159,7 +159,7 @@
 
             <div class="text-right">
                 <a class="btn btn-lg btn-secondary" type="button" disabled="disabled" id="download-rows">Télécharger 💾</a>
-                <button class="btn btn-lg btn-warning" type="button" disabled="disabled" id="save-sachets">Sauvegarder Sachet 🏄</button>
+                <button class="btn btn-lg btn-warning" type="button" disabled="disabled" id="save-sachets">Générer Sachets 🏄</button>
                 <button class="btn btn-lg btn-primary" type="button" disabled="disabled" id="send-emails">Envoyer 🛫</button>
             </div>
         </div>
