--- a/front/admin.html
+++ b/front/admin.html
@@ -157,11 +157,18 @@
                 </div>
             </div>
 
-            <div class="text-right">
-                <a class="btn btn-lg btn-secondary" type="button" disabled="disabled" id="download-rows">Télécharger 💾</a>
-                <button class="btn btn-lg btn-warning" type="button" disabled="disabled" id="save-sachets">Générer Sachets 🏄</button>
-                <button class="btn btn-lg btn-primary" type="button" disabled="disabled" id="send-emails">Envoyer 🛫</button>
+            <div class="row">
+                <div class="col-md-3 text-left">
+                    <a class="btn btn-lg btn-dark" type="button" id="download-all">ID Sachets 📦</a>
+                </div>
+
+                <div class="col-md-9 text-right">
+                    <a class="btn btn-lg btn-secondary" type="button" disabled="disabled" id="download-rows">Télécharger 💾</a>
+                    <button class="btn btn-lg btn-warning" type="button" disabled="disabled" id="save-sachets">Générer Sachets 🏄</button>
+                    <button class="btn btn-lg btn-primary" type="button" disabled="disabled" id="send-emails">Envoyer 🛫</button>
+                </div>
             </div>
+
         </div>
     </div>
 </div>
