Better error management

--- a/front/admin.html
+++ b/front/admin.html
@@ -73,7 +73,7 @@
             color: #205685;
         }
 
-        .csv-container {
+        .csv-container, .errors-container {
             display: none;
         }
 
@@ -169,6 +169,9 @@
                 </div>
             </div>
 
+            <div class="errors-container">
+
+            </div>
         </div>
     </div>
 </div>
