--- a/front/admin.html
+++ b/front/admin.html
@@ -88,8 +88,8 @@
         }
 
         .custom-file-input.custom-file-label::after,
-        .custom-file-input:lang(en)~.custom-file-label::after,
-        .custom-file-input:lang(fr)~.custom-file-label::after {
+        .custom-file-input:lang(en) ~ .custom-file-label::after,
+        .custom-file-input:lang(fr) ~ .custom-file-label::after {
             content: '.csv, .txt'
         }
 
@@ -139,7 +139,11 @@
                     <table class="table table-bordered">
                         <thead>
                         <tr>
-                            <th scope="col"><div class="form-group form-check"><input type="checkbox" class="form-check-input check-all" checked></div></th>
+                            <th scope="col">
+                                <div class="form-group form-check"><input type="checkbox"
+                                                                          class="form-check-input check-all" checked>
+                                </div>
+                            </th>
                             <th scope="col">#</th>
                             <th scope="col">Email</th>
                             <th scope="col">Url</th>
@@ -163,14 +167,23 @@
                 </div>
 
                 <div class="col-md-9 text-right">
-                    <a class="btn btn-lg btn-secondary" type="button" disabled="disabled" id="download-rows">Télécharger 💾</a>
-                    <button class="btn btn-lg btn-warning" type="button" disabled="disabled" id="save-sachets">Générer Sachets 🏄</button>
-                    <button class="btn btn-lg btn-primary" type="button" disabled="disabled" id="send-emails">Envoyer 🛫</button>
+                    <a class="btn btn-lg btn-secondary" type="button" disabled="disabled" id="download-rows">Télécharger
+                        💾</a>
+                    <button class="btn btn-lg btn-warning" type="button" disabled="disabled" id="save-sachets">Générer
+                        Sachets 🏄
+                    </button>
+                    <button class="btn btn-lg btn-primary" type="button" disabled="disabled" id="send-emails">Envoyer
+                        🛫
+                    </button>
                 </div>
             </div>
 
             <div class="errors-container">
+                <div class="alert alert-warning mt-2" role="alert"><h3>Erreurs de ligne</h3>
+                    <ul>
 
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
