Separated image generation logic, admin generates all images. general optimizations

--- a/front/index.html
+++ b/front/index.html
@@ -12,6 +12,7 @@
 <body>
 
 <div class="loader">
+    <h3 style="color: #ffffff; margin-bottom: 1rem;">Chargement</h3>
     <div class="spinner-border text-light" role="status">
         <span class="sr-only">Loading...</span>
     </div>
@@ -155,14 +156,16 @@
 <div>
     <img src="objects/dos/stridePicDos.png" id="stridePicDos" style="display:none;">
     <img src="objects/dos/DessinDos.png" id="DessinDos" style="display:none;">
-    <img src="objects/dos/DessinDosSachet.png" id="DessinDosSachet" style="display:none;">
     <img src="objects/dos/TextDos.png" id="TextDos" style="display:none;">
-    <img src="objects/dos/TextDosSachet.png" id="TextDosSachet" style="display:none;">
 
     <img src="objects/face/stridePicFace.png" id="stridePicFace" style="display:none;">
     <img src="objects/face/DessinFace.png" id="DessinFace" style="display:none;">
-    <img src="objects/face/DessinFaceSachet.png" id="DessinFaceSachet" style="display:none;">
     <img src="objects/face/TextFace.png" id="TextFace" style="display:none;">
+
+
+    <img src="objects/dos/DessinDosSachet.png" id="DessinDosSachet" style="display:none;">
+    <img src="objects/dos/TextDosSachet.png" id="TextDosSachet" style="display:none;">
+    <img src="objects/face/DessinFaceSachet.png" id="DessinFaceSachet" style="display:none;">
     <img src="objects/face/TextFaceSachet.png" id="TextFaceSachet" style="display:none;">
 
     <img src="objects/logoExample.png" id="logoExample" style="display:none;">
