--- a/front/admin.html
+++ b/front/admin.html
@@ -161,19 +161,23 @@
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-md-3 text-left">
-                    <a class="btn btn-lg btn-dark" type="button" id="download-all">ID Sachets 📦</a>
-                </div>
-
-                <div class="col-md-9 text-right">
+            <div class="text-center">
+                <div class="btn-group" role="group" aria-label="Basic example">
+                    <a class="btn btn-lg btn-dark" type="button" id="download-all">Tous les Sachets 📦</a>
                     <a class="btn btn-lg btn-secondary" type="button" disabled="disabled" id="download-rows">Télécharger
+                        CSV
                         💾</a>
-                    <button class="btn btn-lg btn-warning" type="button" disabled="disabled" id="save-sachets">Générer
+                    <button class="btn btn-lg btn-warning" type="button" disabled="disabled" id="save-sachets">
+                        Générer
                         Sachets 🏄
                     </button>
-                    <button class="btn btn-lg btn-primary" type="button" disabled="disabled" id="send-emails">Envoyer
+                    <button class="btn btn-lg btn-primary" type="button" disabled="disabled" id="send-emails">
+                        Envoyer mails
                         🛫
+                    </button>
+                    <button class="btn btn-lg btn-primary" type="button" disabled="disabled" id="download-images">
+                        Télécharger Images
+                        🛹
                     </button>
                 </div>
             </div>
@@ -189,6 +193,12 @@
     </div>
 </div>
 
+<img src="objects/dos/DessinDosSachet.png" id="DessinDosSachet" style="display:none;">
+<img src="objects/dos/TextDosSachet.png" id="TextDosSachet" style="display:none;">
+<img src="objects/face/DessinFaceSachet.png" id="DessinFaceSachet" style="display:none;">
+<img src="objects/face/TextFaceSachet.png" id="TextFaceSachet" style="display:none;">
+
+<img src="objects/logoExample.png" id="logoExample" style="display:none;">
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
