Avoid repeated emails

--- a/front/admin.html
+++ b/front/admin.html
@@ -182,7 +182,7 @@
                         </tr>
                         <tr>
                             <th scope="col" colspan="2">
-                                <h4><span class="badge badge-pill badge-primary">Filter</span></h4>
+<!--                                <h4><span class="badge badge-pill badge-primary">Filter</span></h4>-->
                             </th>
                             <th scope="col">
                                 <input type="text"
